some new pubs, idnex updates.

--- a/index.html
+++ b/index.html
@@ -589,8 +589,9 @@ presented in April 2002. (PDF; 170kb).
 <h3 class="sec"><a name="pubs">Publications</a></h3 class="sec">
 
 <ul>
-<li> Here's an <a href="pubs-atom.xml">RSS feed of my papers</a>. (Note: the feed I had created with Dapper seems spam-infested now.)
-Here's a pointer to <a href="http://www.informatik.uni-trier.de/~ley/db/indices/a-tree/c/Cohen:William_W=.html">my DBLP page</a>.
+Here's pointers to <a href="http://www.informatik.uni-trier.de/~ley/db/indices/a-tree/c/Cohen:William_W=.html">my DBLP page</a>,
+<a href="https://scholar.google.com/citations?user=8ys-38kAAAAJ&hl=en&oi=sra">my Scholar page</a>,
+and <a href="https://arxiv.org/search/cs?searchtype=author&query=Cohen%2C+W+W">my Arxiv page</a>.
 
 <li><i>A Computer Scientist's Guide To Biology</i> is no longer
 available from this web page, but is now <a
@@ -657,7 +658,6 @@ Current students:
 
 <!-- Students: -->
 <ul>
-<li><a href="http://www.cs.cmu.edu/~bdhingra/">Bhuwan Dhingra</a>, LTI PhD student, co-advised with Ruslan Salakhutdinov.
 <li>Daniel Spokoyny, LTI PhD student, co-supervised with Taylog Berg-Kirkpatrick.
 </ul>
 
@@ -672,6 +672,8 @@ Former students/colleagues:
 
 <p>
 
+<li><a href="https://leejayyoon.github.io/">Jay Yoon Lee</a>, CSD PhD student, co-advised with Jaime Carbonell.
+<li><a href="http://www.cs.cmu.edu/~bdhingra/">Bhuwan Dhingra</a>, LTI PhD student, co-advised with Ruslan Salakhutdinov.
 <li><a href="http://kimiyoung.github.io/">Zhilin Yang</a>, former LTI PhD student, co-advised with Ruslan Salakhutdinov, now doing a startup.
 <li><a href="https://sites.google.com/site/rosecatherinek/home">Rose Catherine Kanjirathinkal</a>, former LTI PhD student, now at Yahoo.
 <li><a href="http://www.cs.cmu.edu/~yww/">William Yang Wang</a>, former LTI PhD student, now at UCSB.
@@ -693,7 +695,7 @@ co-advised with <a href="http://www.cs.cmu.edu/~cprose/">Carolyn Ros&eacute;</a>
 <li><a href="http://www.cs.cmu.edu/~nlao/">Ni Lao</a> former LTI PhD student
 <li><a href="http://www.cs.cmu.edu/~rcwang">Richard C. Wang</a>, former LTI PhD student co-advised with <a
 href="http://www.cs.cmu.edu/~ref/">Bob Frederking</a>.
-<li><a href="http://www.cs.cmu.edu/~aarnold/">Andrew Arnold</a> former MLD PhD student, now at Google.
+<li><a href="http://www.cs.cmu.edu/~aarnold/">Andrew Arnold</a> former MLD PhD student, now at Amazon.
 <li><a href="http://www.cs.cmu.edu/~einat">Einat Minkov</a> former LTI PhD student, now at Haifa University.
 <li><a href="http://www.cs.cmu.edu/~vitor">Vitor Rocha de Carvalho</a> former LTI PhD student, now at SnapChat.
 <li><a href="http://www.cs.cmu.edu/~woomy/">Zhenzhen Kou</a> former MLD PhD student, now at Google.
@@ -709,7 +711,7 @@ former MLD PhD student, co-advised with <a href="http://www.stat.cmu.edu/~fienbe
 <p>
 
 <li>Haitian Sun, former MLD MS student, now working in my group at Google.
-<li><a href="http://www.cs.cmu.edu/~fanyang1/">Fan Yang</a>, MLD MS student, now on the job market!
+<li><a href="http://www.cs.cmu.edu/~fanyang1/">Fan Yang</a>, MLD MS student.
 <li><a href="https://andy-jqa.github.io/">Qiao Jin</a>, School of Medicine, Tsinghua University,  
 now supervised by Xinghua Lu.
 <li>Ezra Winston, former MLD Master's student, now a PhD student in MLD.
