--- a/pubs-a.html
+++ b/pubs-a.html
@@ -3,6 +3,12 @@
 </head>
 <body><h3>William W. Cohen's Papers: Applications</h3>
 <ol>
+<li>Danish Pruthi, Bhuwan Dhingra, Livio Baldini Soares, Michael Collins, Zachary C. Lipton, Graham Neubig, William W. Cohen (2020): <a href="https://arxiv.org/abs/2012.00893">Evaluating Explanations: How much do explanations from the teacher aid students?</a> in <a href="recent.html">preparation</a>.
+</li>
+<li>Bill Yuchen Lin, Haitian Sun, Bhuwan Dhingra, Manzil Zaheer, Xiang Ren, William W. Cohen (2020): <a href="https://arxiv.org/abs/2010.14439">Differentiable Open-Ended Commonsense Reasoning</a> in <a href="recent.html">preparation</a>.
+</li>
+<li>Wenhu Chen, Ming-Wei Chang, Eva Schlinger, William Wang, William W. Cohen (2020): <a href="https://arxiv.org/abs/2010.10439">Open Question Answering Over Tables and Text</a> in <a href="recent.html">preparation</a>.
+</li>
 <li>Pat Verga, Haitian Sun, Livio Baldini Soares, and William W. Cohen (2020): <a href="https://arxiv.org/abs/2007.00849">Facts as Experts: Adaptable and Interpretable Neural Memory over Symbolic Knowledge</a> in <a href="recent.html">preparation</a>.
 </li>
 <li>Yifeng Tao, Chunhui Cai, William W. Cohen, Xinghua Lu (2020): <a href="postscript/psb-2020.pdf">From genome to phenome: Predicting multiple cancer phenotypes based on somatic genomic alternations bia the genomic impact transformer</a> in <a href="recent.html">PSB-2020</a>.
