added emql paper

--- a/pubs-e.html
+++ b/pubs-e.html
@@ -3,6 +3,8 @@
 </head>
 <body><h3>William W. Cohen's Papers: Explanation-Based Learning</h3>
 <ol>
+<li>Danish Pruthi, Bhuwan Dhingra, Livio Baldini Soares, Michael Collins, Zachary C. Lipton, Graham Neubig, William W. Cohen (2020): <a href="https://arxiv.org/abs/2012.00893">Evaluating Explanations: How much do explanations from the teacher aid students?</a> in <a href="recent.html">preparation</a>.
+</li>
 <li>William Yang Wang, Kathryn Mazaitis, and William W. Cohen (2015): <a href="postscript/ijcai-2015.pdf">A Soft Version of Predicate Invention Based on Structured Sparsity</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/ijcai/WangMC15">IJCAI-2015</a>.
 </li>
 <li>William Yang Wang, Kathryn Mazaitis, Ni Lao, Tom Mitchell, and William W. Cohen (2015): <a href="postscript/mlj-2015-proppr.pdf">Efficient Inference and Learning in a Large Knowledge Base: Reasoning with Extracted Information using a Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://link.springer.com/article/10.1007%2Fs10994-015-5488-x">Machine Learning, 2015</a>.
