--- a/pubs-n.html
+++ b/pubs-n.html
@@ -9,6 +9,8 @@
 </li>
 <li>Wenhu Chen, Ming-Wei Chang, Eva Schlinger, William Wang, William W. Cohen (2020): <a href="https://arxiv.org/abs/2010.10439">Open Question Answering Over Tables and Text</a> in <a href="recent.html">preparation</a>.
 </li>
+<li>Haitian Sun, Andrew O. Arnold, Tania Bedrax-Weiss, Fernando Pereira, William W. Cohen (2020): <a href="https://arxiv.org/abs/2004.03658">Faithful Embeddings for Knowledge Base Queries</a> in <a href="recent.html">NeurIPS2020</a>.
+</li>
 <li>Pat Verga, Haitian Sun, Livio Baldini Soares, and William W. Cohen (2020): <a href="https://arxiv.org/abs/2007.00849">Facts as Experts: Adaptable and Interpretable Neural Memory over Symbolic Knowledge</a> in <a href="recent.html">preparation</a>.
 </li>
 <li>William W. Cohen, Fan Yang, and Kathryn Rivard Mazaitis (2020): <a href="https://jair.org/index.php/jair/article/view/11944/26561">TensorLog: A Probabilistic Database Implemented Using Deep-Learning Infrastructure</a> in <a href="recent.html">JAIR</a>.
