update colleagues list

--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@ Current students:
 
 <!-- Students: -->
 <ul>
-<li>Daniel Spokoyny, LTI PhD student, co-supervised with Taylog Berg-Kirkpatrick.
+<li>Daniel Spokoyny, LTI PhD student, co-supervised with Taylor Berg-Kirkpatrick.
 </ul>
 
 <p>
@@ -669,6 +669,7 @@ Former students/colleagues:
 <p>
 
 <ul>
+<li>
 <a href="http://www.cs.cmu.edu/~krivard/">Katie Rivard Mazaitis</a>, research programmer/analyst
 
 <p>
@@ -677,6 +678,7 @@ Former students/colleagues:
 <li><a href="http://www.cs.cmu.edu/~bdhingra/">Bhuwan Dhingra</a>, LTI PhD student, co-advised with Ruslan Salakhutdinov.
 <li><a href="http://kimiyoung.github.io/">Zhilin Yang</a>, former LTI PhD student, co-advised with Ruslan Salakhutdinov, now doing a startup.
 <li><a href="https://sites.google.com/site/rosecatherinek/home">Rose Catherine Kanjirathinkal</a>, former LTI PhD student, now at Yahoo.
+<li><a href="http://www.cs.cmu.edu/~fanyang1/">Fan Yang</a> (former MLD PhD student)
 <li><a href="http://www.cs.cmu.edu/~yww/">William Yang Wang</a>, former LTI PhD student, now at UCSB.
 <li><a href="http://www.cs.cmu.edu/afs/cs/Web/People/dmovshov/">Dana Movshovitz-Attias</a> former CSD PhD student,
  now at Google.
