--- a/pubs-s.html
+++ b/pubs-s.html
@@ -2,13 +2,16 @@
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body><h3>Selected and/or recent papers by William W. Cohen</h3>
+<h3>Recent papers: 2021</h3>
+<ol>
+<li>Wenhu Chen, Ming-Wei Chang, Eva Schlinger, William Wang, William W. Cohen (2021): <a href="https://openreview.net/forum?id=yRJUNfGzdsT">Open Question Answering Over Tables and Text</a> in <a href="recent.html">ICLR2021</a>.
+</li>
+</ol>
 <h3>Recent papers: 2020</h3>
 <ol>
 <li>Danish Pruthi, Bhuwan Dhingra, Livio Baldini Soares, Michael Collins, Zachary C. Lipton, Graham Neubig, William W. Cohen (2020): <a href="https://arxiv.org/abs/2012.00893">Evaluating Explanations: How much do explanations from the teacher aid students?</a> in <a href="recent.html">preparation</a>.
 </li>
 <li>Bill Yuchen Lin, Haitian Sun, Bhuwan Dhingra, Manzil Zaheer, Xiang Ren, William W. Cohen (2020): <a href="https://arxiv.org/abs/2010.14439">Differentiable Open-Ended Commonsense Reasoning</a> in <a href="recent.html">preparation</a>.
-</li>
-<li>Wenhu Chen, Ming-Wei Chang, Eva Schlinger, William Wang, William W. Cohen (2020): <a href="https://arxiv.org/abs/2010.10439">Open Question Answering Over Tables and Text</a> in <a href="recent.html">preparation</a>.
 </li>
 <li>Haitian Sun, Andrew O. Arnold, Tania Bedrax-Weiss, Fernando Pereira, William W. Cohen (2020): <a href="https://arxiv.org/abs/2004.03658">Faithful Embeddings for Knowledge Base Queries</a> in <a href="recent.html">NeurIPS2020</a>.
 </li>
@@ -25,13 +28,13 @@
 </ol>
 <h3>Recent papers: 2019</h3>
 <ol>
-<li>Andrew O. Arnold, William W. Cohen (2019): <a href="https://arxiv.org/abs/1911.06111">Instance-based Transfer Learning for Multilingual Deep Retrieval</a> in <a href="recent.html">preparation</a>.
+<li>Andrew O. Arnold, William W. Cohen (2019): <a href="https://arxiv.org/abs/1911.06111">Instance-based Transfer Learning for Multilingual Deep Retrieval</a> in <a href="recent.html">arxiv</a>.
 </li>
 <li>Qiao Jin, Bhuwan Dhingra, Zhengping Liu, William W Cohen, and Xinghua Lu (2019): <a href="https://arxiv.org/pdf/1909.06146.pdf">PubMedQA: A Dataset for Biomedical Research Question Answering</a> in <a href="recent.html">EMNLP-2019</a>.
 </li>
 <li>Bhuwan Dhingra, Manaal Faruqui, Ankur Parikh, Ming-Wei Chang, Dipanjan Das, William W. Cohen (2019): <a href="http://arxiv.org/abs/1906.01081">Handling Divergent Reference Texts when Evaluating Table-to-Text Generation</a> in <a href="recent.html">ACL-2019</a>.
 </li>
-<li>William W. Cohen, Haitian Sun, Alex Hofer, Matthew Siegler  (2019): <a href="http://arxiv.org/abs/1905.10417">Differentiable Representations For Multihop Inference Rules</a> in <a href="recent.html">preparation</a>.
+<li>William W. Cohen, Haitian Sun, Alex Hofer, Matthew Siegler  (2019): <a href="http://arxiv.org/abs/1905.10417">Differentiable Representations For Multihop Inference Rules</a> in <a href="recent.html">arxiv</a>.
 </li>
 <li>William W. Cohen, Matthew Siegler, Alex Hofer (2019): <a href="http://arxiv.org/abs/1905.06209">Neural Query Language: A Knowledge Base Query Language for Tensorflow</a> in <a href="recent.html">arxiv</a>.
 </li>
@@ -40,13 +43,9 @@
 <li>Qiao Jin, Bhuwan Dhingra, William W. Cohen, Xinghua Lu (2019): <a href="http://arxiv.org/abs/1904.02181">Probing Biomedical Embeddings from Language Models</a> in <a href="recent.html">preparation</a>.
 </li>
 </ol>
-<h3>Recent papers: 2018</h3>
+<h3>Selected other papers</h3>
 <ol>
-<li>Haitian Sun, William W. Cohen, Lidong Bing (2018): <a href="http://arxiv.org/abs/1804.09238">Semi-Supervised Learning with Declaratively Specified Entropy Constraints</a> in <a href="recent.html">NIPS-2018</a>.
-</li>
 <li>Zhilin Yang, Jake (Junbo) Zhao, Bhuwan Dhingra, Kaiming He, William W. Cohen, Ruslan Salakhutdinov, Yann LeCun (2018): <a href="http://arxiv.org/abs/1806.05662">GLoMo: Unsupervisedly Learned Relational Graphs as Transferable Representations</a> in <a href="recent.html">NIPS-2018</a>.
-</li>
-<li>Qiao Jin, Bhuwan Dhingra, William W. Cohen, and Xinghua Lu (2018): <a href="postscript/bioasq-2018.pdf">AttentionMeSH: Simple, Effective and Interpretable Automatic MeSH Indexer</a> in <a href="recent.html">BioASQ-2018</a>.
 </li>
 <li>Zhilin Yang, Peng Qi, Saizheng Zhang, Yoshua Bengio, William W. Cohen, Ruslan Salakhutdinov, Christopher D. Manning (2018): <a href="http://arxiv.org/abs/1809.09600">HotpotQA: A Dataset for Diverse, Explainable Multi-hop Question Answering</a> in <a href="recent.html">EMNLP-2018</a>.
 </li>
@@ -54,11 +53,6 @@
 </li>
 <li>Bhuwan Dhingra, Qiao Jin, Zhilin Yang, William W. Cohen, Ruslan Salakhutdinov (2018): <a href="https://www.aclweb.org/anthology/N18-2007/">Neural Models for Reasoning over Multiple Mentions using Coreference</a> in <a href="recent.html">NAACL-2018</a>.
 </li>
-<li>Vidhisha Balachandran and  Dheeraj Rajagopal and , Rose Catherine Kanjirathinkal and William W. Cohen (2018): <a href="https://www.aclweb.org/anthology/W18-6122/">Learning to Define Terms in the Software Domain</a> in <a href="recent.html">W-NUT 2018</a>.
-</li>
-</ol>
-<h3>Selected other papers</h3>
-<ol>
 <li>T. Mitchell, W. Cohen, E. Hruschka, P. Talukdar, B. Yang, J. Betteridge, A. Carlson, B. Dalvi, M. Gardner, B. Kisiel, J. Krishnamurthy, N. La, K. Mazaitis, T. Mohamed, N. Nakashole, E. Platanios, A. Ritter, M. Samadi, B. Settles, R. Wang, D. Wijaya, A. Gupta, X. Chen, A. Saparov,M. Greaves, J. Welling (2017): <a href="postscript/cacm-2017.pdf">Never-Ending Learning   </a> in <a href="recent.html">CACM</a>.
 </li>
 <li>Zhilin Yang, Zihang Dai, Ruslan Salakhutdinov, and William W. Cohen (2017): <a href="http://arxiv.org/abs/1711.03953">Breaking the Softmax Bottleneck: A High-Rank RNN Language Model</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1711-03953">arxiv.org 1711.03953</a>.
