added opql paper

--- a/pubs-s.html
+++ b/pubs-s.html
@@ -4,6 +4,8 @@
 <body><h3>Selected and/or recent papers by William W. Cohen</h3>
 <h3>Recent papers: 2021</h3>
 <ol>
+<li>Haitian Sun, Pat Verga, Bhuwan Dhingra, Ruslan Salakhutdinov, William W. Cohen (2021): <a href="https://arxiv.org/abs/2102.07043">Reasoning Over Virtual Knowledge Bases With Open Predicate Relations</a> in <a href="recent.html">preparation</a>.
+</li>
 <li>Wenhu Chen, Ming-Wei Chang, Eva Schlinger, William Wang, William W. Cohen (2021): <a href="https://openreview.net/forum?id=yRJUNfGzdsT">Open Question Answering Over Tables and Text</a> in <a href="recent.html">ICLR2021</a>.
 </li>
 </ol>
