--- a/pubs-n.html
+++ b/pubs-n.html
@@ -3,6 +3,8 @@
 </head>
 <body><h3>William W. Cohen's Papers: Deep Learning</h3>
 <ol>
+<li>Haitian Sun, Pat Verga, Bhuwan Dhingra, Ruslan Salakhutdinov, William W. Cohen (2021): <a href="https://arxiv.org/abs/2102.07043">Reasoning Over Virtual Knowledge Bases With Open Predicate Relations</a> in <a href="recent.html">preparation</a>.
+</li>
 <li>Wenhu Chen, Ming-Wei Chang, Eva Schlinger, William Wang, William W. Cohen (2021): <a href="https://openreview.net/forum?id=yRJUNfGzdsT">Open Question Answering Over Tables and Text</a> in <a href="recent.html">ICLR2021</a>.
 </li>
 <li>Danish Pruthi, Bhuwan Dhingra, Livio Baldini Soares, Michael Collins, Zachary C. Lipton, Graham Neubig, William W. Cohen (2020): <a href="https://arxiv.org/abs/2012.00893">Evaluating Explanations: How much do explanations from the teacher aid students?</a> in <a href="recent.html">preparation</a>.
