--- a/pubs-a.html
+++ b/pubs-a.html
@@ -3,6 +3,8 @@
 </head>
 <body><h3>William W. Cohen's Papers: Applications</h3>
 <ol>
+<li>Avishai Zagoury, Einat Minkov, Idan Szpektor, William W. Cohen (2021): <a href="https://arxiv.org/abs/2104.01940">What's the best place for an AI conference, Vancouver or ______: Why completing comparative questions is difficult</a> in <a href="recent.html">AAAI2021</a>.
+</li>
 <li>Haitian Sun, Pat Verga, Bhuwan Dhingra, Ruslan Salakhutdinov, William W. Cohen (2021): <a href="https://arxiv.org/abs/2102.07043">Reasoning Over Virtual Knowledge Bases With Open Predicate Relations</a> in <a href="recent.html">preparation</a>.
 </li>
 <li>Wenhu Chen, Ming-Wei Chang, Eva Schlinger, William Wang, William W. Cohen (2021): <a href="https://openreview.net/forum?id=yRJUNfGzdsT">Open Question Answering Over Tables and Text</a> in <a href="recent.html">ICLR2021</a>.
