emnlp paper and bhuwan/zhilin status

--- a/index.html
+++ b/index.html
@@ -674,12 +674,12 @@ Former students/colleagues:
 
 <p>
 
-<li><a href="https://leejayyoon.github.io/">Jay Yoon Lee</a>, CSD PhD student, co-advised with Jaime Carbonell.
-<li><a href="http://www.cs.cmu.edu/~bdhingra/">Bhuwan Dhingra</a>, LTI PhD student, co-advised with Ruslan Salakhutdinov.
-<li><a href="http://kimiyoung.github.io/">Zhilin Yang</a>, former LTI PhD student, co-advised with Ruslan Salakhutdinov, now doing a startup.
+<li><a href="https://leejayyoon.github.io/">Jay Yoon Lee</a>, CSD PhD student, co-advised with Jaime Carbonell, now a postdoc at UMass/Amherst.
+<li><a href="http://www.cs.cmu.edu/~bdhingra/">Bhuwan Dhingra</a>, LTI PhD student, co-advised with Ruslan Salakhutdinov, now an Assistant Professor at Duke University.
+<li><a href="http://kimiyoung.github.io/">Zhilin Yang</a>, former LTI PhD student, co-advised with Ruslan Salakhutdinov, now an Assistant Professor at Tsinghua University.
 <li><a href="https://sites.google.com/site/rosecatherinek/home">Rose Catherine Kanjirathinkal</a>, former LTI PhD student, now at Yahoo.
 <li><a href="http://www.cs.cmu.edu/~fanyang1/">Fan Yang</a> (former MLD PhD student)
-<li><a href="http://www.cs.cmu.edu/~yww/">William Yang Wang</a>, former LTI PhD student, now at UCSB.
+<li><a href="http://www.cs.cmu.edu/~yww/">William Yang Wang</a>, former LTI PhD student, now an Assistant Professor at UCSB.
 <li><a href="http://www.cs.cmu.edu/afs/cs/Web/People/dmovshov/">Dana Movshovitz-Attias</a> former CSD PhD student,
  now at Google.
 <li><a href="http://www.cs.cmu.edu/afs/cs/Web/People/bbd/">Bhavana Dalvi Mishra</a>former LTI PhD student
