--- a/pubs.html
+++ b/pubs.html
@@ -4,6 +4,8 @@
 <body><h3>Papers by William W. Cohen</h3>
 <h3>2021</h3>
 <ol>
+<li>Julian Martin Eisenschlos, Maharshi Gor, Thomas Muller, William W. Cohen (2021): <a href="https://arxiv.org/abs/2109.04312">MATE: Multi-view Attention for Table Transformer Efficiency</a> in <a href="recent.html">EMNLP-2021</a>.
+</li>
 <li>Bhuwan Dhingra, Jeremy R. Cole, Julian Martin Eisenschlos, Daniel Gillick, Jacob Eisenstein, William W. Cohen (2021): <a href="https://arxiv.org/abs/2106.15110">Time-Aware Language Models as Temporal Knowledge Bases</a> in <a href="recent.html">preparation</a>.
 </li>
 <li>Haitian Sun, William W. Cohen, Ruslan Salakhutdinov (2021): <a href="https://arxiv.org/abs/2106.00200">End-to-End Multihop Retrieval for Compositional Question Answering over Long Documents</a> in <a href="recent.html">preparation</a>.
