update haitian status

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@ former MLD PhD student, co-advised with <a href="http://www.stat.cmu.edu/~fienbe
 
 <p>
 
-<li>Haitian Sun, former MLD MS student, now working in my group at Google.
+<li>Haitian Sun, former MLD MS student, now a PhD student at CMU.
 <li><a href="http://www.cs.cmu.edu/~fanyang1/">Fan Yang</a>, MLD MS student.
 <li><a href="https://andy-jqa.github.io/">Qiao Jin</a>, School of Medicine, Tsinghua University,  
 now supervised by Xinghua Lu.
