--- a/pubs-x.html
+++ b/pubs-x.html
@@ -3,15 +3,15 @@
 </head>
 <body><h3>William W. Cohen's Papers: Info Extraction/Reading</h3>
 <ol>
-<li>William W. Cohen, Haitian Sun, R. Alex Hofer, Matthew Siegler (2020): <a href="https://arxiv.org/abs/2002.06115">Scalable Neural Methods for Reasoning With a Symbolic Knowledge Base </a> in <a href="recent.html">ICLR-2020</a>.
+<li>William W. Cohen, Haitian Sun, R. Alex Hofer, Matthew Siegler (2020): <a href="https://arxiv.org/abs/2002.06115">Scalable Neural Methods for Reasoning With a Symbolic Knowledge Base </a> in <a href="recent.html">ICLR-2020</a> <i>Paper on Neural Query Language (NQL) a differentiable dataflow query language.  NQL is useful for building KBQA systems that can be trained from denotations, but relies heavily on sparse-matrix operations that are not implemented in all accelerators.</i>.
 </li>
-<li>Bhuwan Dhingra, Manzil Zaheer, Vidhisha Balachandran, Graham Neubig, Ruslan Salakhutdinov, William W. Cohen (2020): <a href="https://openreview.net/forum?id=SJxstlHFPH">Differentiable Reasoning over a Virtual Knowledge Base</a> in <a href="recent.html">ICLR-2020</a>.
+<li>Bhuwan Dhingra, Manzil Zaheer, Vidhisha Balachandran, Graham Neubig, Ruslan Salakhutdinov, William W. Cohen (2020): <a href="https://openreview.net/forum?id=SJxstlHFPH">Differentiable Reasoning over a Virtual Knowledge Base</a> in <a href="recent.html">ICLR-2020</a> <i>Describes DrKIT, which allows one to answer multihop chain queries on a "virtual KB"---a corpus of entity-linked documents.  In DrKIT, entity mentions are indexed for neural retrieval with a rich representation of their context, and reasoning consists of navigating between co-occurring mentions.</i>.
 </li>
 <li>Bhuwan Dhingra, Manaal Faruqui, Ankur Parikh, Ming-Wei Chang, Dipanjan Das, William W. Cohen (2019): <a href="http://arxiv.org/abs/1906.01081">Handling Divergent Reference Texts when Evaluating Table-to-Text Generation</a> in <a href="recent.html">ACL-2019</a>.
 </li>
-<li>William W. Cohen, Haitian Sun, Alex Hofer, Matthew Siegler  (2019): <a href="http://arxiv.org/abs/1905.10417">Differentiable Representations For Multihop Inference Rules</a> in <a href="recent.html">arxiv</a>.
+<li>William W. Cohen, Haitian Sun, Alex Hofer, Matthew Siegler  (2019): <a href="http://arxiv.org/abs/1905.10417">Differentiable Representations For Multihop Inference Rules</a> in <a href="recent.html">arxiv</a> <i>Earlier version of ICLR paper on NQL.</i>.
 </li>
-<li>William W. Cohen, Matthew Siegler, Alex Hofer (2019): <a href="http://arxiv.org/abs/1905.06209">Neural Query Language: A Knowledge Base Query Language for Tensorflow</a> in <a href="recent.html">arxiv</a>.
+<li>William W. Cohen, Matthew Siegler, Alex Hofer (2019): <a href="http://arxiv.org/abs/1905.06209">Neural Query Language: A Knowledge Base Query Language for Tensorflow</a> in <a href="recent.html">arxiv</a> <i>Earlier version of ICLR paper on NQL focusing on the language constructs used.</i>.
 </li>
 <li>Haitian Sun, Tania Bedrax-Weiss, William W. Cohen (2019): <a href="http://arxiv.org/abs/1904.09537">PullNet: Open Domain Question Answering with Iterative Retrieval on Knowledge Bases and Text</a> in <a href="recent.html">EMNLP-2019</a>.
 </li>
@@ -178,7 +178,7 @@
 <li>William W. Cohen (1999): <i>A Demonstration of WHIRL (demonstration abstract)</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/sigir/sigir99.html#Cohen99">SIGIR 1999: 327</a>.
 </li>
 </ol>
-<p align="center">[<a href="pubs-s.html">Selected papers</a>| By topic: <a href="pubs-n.html">Deep Learning</a>|  <a href="pubs-x.html">Info Extraction/Reading</a>|  <a href="pubs-l.html">Topic Modeling</a>|  <a href="pubs-g.html">Learning in Graphs</a>|  <a href="pubs-m.html">Matching/Data Integration</a>|  <a href="pubs-t.html">Text Categorization</a>|  <a href="pubs-r.html">Rule Learning</a>|  <a href="pubs-e.html">Explanation-Based Learning</a>|  <a href="pubs-f.html">Formal Results</a>|  <a href="pubs-i.html">Inductive Logic Programming</a>|  <a href="pubs-c.html">Collaborative Filtering</a>|  <a href="pubs-a.html">Applications</a>|  <a href="pubs-d.html">Intelligent Tutoring</a>|  <a href="pubs-G.html">GNAT System</a>|  By year: <a href="pubs.html">All papers</a>]</p>
+<p align="center">[<a href="pubs-s.html">Selected papers</a>| By topic: <a href="pubs-n.html">Deep Learning</a>|  <a href="pubs-x.html">Info Extraction/Reading</a>|  <a href="pubs-l.html">Topic Modeling</a>|  <a href="pubs-g.html">Learning in Graphs</a>|  <a href="pubs-m.html">Matching/Data Integration</a>|  <a href="pubs-t.html">Text Categorization</a>|  <a href="pubs-r.html">Rule Learning</a>|  <a href="pubs-e.html">Explanation-Based Learning</a>|  <a href="pubs-f.html">Formal Results</a>|  <a href="pubs-i.html">Inductive Logic Programming</a>|  <a href="pubs-c.html">Collaborative Filtering</a>|  <a href="pubs-a.html">Applications</a>|  <a href="pubs-d.html">Intelligent Tutoring</a>|  <a href="pubs-k.html">Neural Knowledge Representation</a>|  <a href="pubs-G.html">GNAT System</a>|  By year: <a href="pubs.html">All papers</a>]</p>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
