updated formatting for k topic and italicized comments

--- a/pubs-g.html
+++ b/pubs-g.html
@@ -3,11 +3,11 @@
 </head>
 <body><h3>William W. Cohen's Papers: Learning in Graphs</h3>
 <ol>
-<li>William W. Cohen, Fan Yang, and Kathryn Rivard Mazaitis (2020): <a href="https://jair.org/index.php/jair/article/view/11944/26561">TensorLog: A Probabilistic Database Implemented Using Deep-Learning Infrastructure</a> in <a href="recent.html ## Most complete paper on TensorLog, a predecessor for NQL that was a Prolog-like logic instead of a dataflow query language.">JAIR</a>.
+<li>William W. Cohen, Fan Yang, and Kathryn Rivard Mazaitis (2020): <a href="https://jair.org/index.php/jair/article/view/11944/26561">TensorLog: A Probabilistic Database Implemented Using Deep-Learning Infrastructure</a> in <a href="recent.html ## Most complete paper on TensorLog, a predecessor for NQL/EmQL that was a Prolog-like logic instead of a dataflow query language">JAIR</a>.
 </li>
-<li>William W. Cohen, Haitian Sun, Alex Hofer, Matthew Siegler  (2019): <a href="http://arxiv.org/abs/1905.10417">Differentiable Representations For Multihop Inference Rules</a> in <a href="recent.html">arxiv</a> <i>Earlier version of ICLR paper on NQL.</i>.
+<li>William W. Cohen, Haitian Sun, Alex Hofer, Matthew Siegler  (2019): <a href="http://arxiv.org/abs/1905.10417">Differentiable Representations For Multihop Inference Rules</a> in <a href="recent.html">arxiv</a>. <br><ul><li>Earlier version of ICLR paper on NQL</ul>.
 </li>
-<li>William W. Cohen, Matthew Siegler, Alex Hofer (2019): <a href="http://arxiv.org/abs/1905.06209">Neural Query Language: A Knowledge Base Query Language for Tensorflow</a> in <a href="recent.html">arxiv</a> <i>Earlier version of ICLR paper on NQL focusing on the language constructs used.</i>.
+<li>William W. Cohen, Matthew Siegler, Alex Hofer (2019): <a href="http://arxiv.org/abs/1905.06209">Neural Query Language: A Knowledge Base Query Language for Tensorflow</a> in <a href="recent.html">arxiv</a>. <br><ul><li>Earlier version of ICLR paper on NQL focusing on the language constructs used</ul>.
 </li>
 <li>Haitian Sun, Tania Bedrax-Weiss, William W. Cohen (2019): <a href="http://arxiv.org/abs/1904.09537">PullNet: Open Domain Question Answering with Iterative Retrieval on Knowledge Bases and Text</a> in <a href="recent.html">EMNLP-2019</a>.
 </li>
